# covertreex

./: .gitignore  AGENTS.md  AUDIT.md  BACKLOG.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  OVERVIEW_2025-11-14T23-28-49_1197ae.md  PARALLEL_COMPRESSED_PLAN.md  README.md  RESIDUAL_CRITICAL_REPORT.md  RESIDUAL_MATERN_REPORT.md  RESIDUAL_PURE_VS_HYBRID_REPORT.md  RESIDUAL_REGRESSION_ANALYSIS.md  RESIDUAL_STATUS_20251126.md  RUST_OPTIMIZATION_ROADMAP_PHASE2.md  RUST_OPT_REPORT_20251126.md  RUST_QUERY_OPT_PLAN.md  SPAGHETTI_AUDIT.md  SURVI_COVER_TREE_AUDIT.md  SURVI_INTEGRATION_PLAN.md  benchmark_grid_32768_default.jsonl  benchmark_grid_32768_default_run2.jsonl  benchmark_grid_32768_hilbert.jsonl  benchmark_grid_32768_natural.jsonl  benchmark_grid_8192.jsonl  benchmark_metrics.csv  benchmark_metrics_32768.csv  benchmark_metrics_32768_run2.csv  benchmark_metrics_32768_run3.csv  benchmark_metrics_32768_run4.csv  benchmark_metrics_8192.csv  benchmark_metrics_8192_run2.csv  benchmark_residual_32768_default.jsonl  benchmark_residual_chunked_20251107_diag0.jsonl  benchmark_residual_chunked_20251107_refresh.jsonl  benchmark_residual_chunked_32768.jsonl  benchmark_residual_clamped_20251107_diag0.jsonl  benchmark_residual_clamped_20251107_refresh.jsonl  benchmark_residual_clamped_gate_20251107.jsonl  (+63 more)
.gemini/: settings.json
benchmarks/: __init__.py  batch_ops.py  compare_backends_residual.py  predecessor_mode_benchmark.py  queries.py  residual_natural_vs_hilbert.py  residual_pure_vs_hybrid.py  run_residual_gold_standard.sh  runtime_breakdown.py  runtime_cli.py  rust_full_residual_benchmark.py  rust_insert_benchmark.py  rust_knn_benchmark.py  rust_residual_query_benchmark.py  subtree_bounds_benchmark.py  vif_static_tree.py
cli/: runtime.py
covertreex/: __init__.py  __main__.py  baseline.py  config.py  diagnostics.py  engine.py
docs/: API.md  AUDIT_IMPLEMENTATION_PLAN.md  BENCHMARK_AUDIT_20251122.md  BUG_PREDECESSOR_MODE_K_FULFILLMENT.md  CLI.md  CORE_IMPLEMENTATIONS.md  FAQ_COVER_TREE_VS_VECTOR_DB.md  METRIC_PRUNING_REPORT.md  PREDECESSOR_MODE_STATUS_20251128.md  REFACTOR_PLAN.md  RESIDUAL_EPICS_2025.md  RESIDUAL_EXPERIMENT_PLAN.md  RESIDUAL_GATE_POSTMORTEM.md  RESIDUAL_IMPACT_ANALYSIS_20251125.md  RESIDUAL_OPT_REPORT_20251125.md  RESIDUAL_PCCT_PLAN.md  RESIDUAL_REGRESSION_20251112.md  RESIDUAL_STATUS_20251123.md  RESIDUAL_STATUS_20251124.md  RUST_PARITY_HEAP_PLAN.md  RUST_PARITY_PLAN.md  SCALING_REPORT_20251120.md  SOTA_ANALYSIS.md  VIF_RE_EVALUATION_20251121.md  mlpack_cover_tree_reference.md  refactor_plan.md  residual_fast_path.md  residual_metric_notes.md  residual_parallel_bench.md  telemetry.md
gpboost_vif_impl_notes/: COVER_TREE.md
notes/: cover_tree_async_extension_2025-10-30.md  cover_tree_compression_paper.md  cover_tree_gpboost_numba_implementation.md  cover_tree_parallel_paper_sketch.md  parallel_compressed_cover_tree.md
profiles/: default.yaml  residual-audit.yaml  residual-fast.yaml  residual-gold.yaml
src/: algo.rs  lib.rs  metric.rs  telemetry.rs  tree.rs
tests/: manual_test_ard.py  test_api_pcct.py  test_baseline_tree.py  test_benchmarks.py  test_cli_querier_guard.py  test_cli_queries_telemetry.py  test_config.py  test_conflict_graph.py  (+24 more)
(+101 files in other folders)
