[package]
name = "covertreex_backend"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "covertreex_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rayon = "1.10"
ndarray = { version = "0.15", features = ["rayon"] }
num-traits = "0.2"
wide = "0.7"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
