[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "covertreex"
version = "0.4.4"
description = "Parallel compressed cover tree (PCCT) library targeting JAX-based Vecchia GP workloads."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Liam", email = "liam@example.com"}
]
dependencies = [
  "numpy>=2.0.0",
  "typing-extensions>=4.9.0",
  "typer>=0.12.5",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
jax = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28"
]
numba = ["numba>=0.59.0"]
dev = [
  "pytest>=8.2",
  "pytest-benchmark>=4.0.0",
  "pytest-chronicle>=0.3.1",
  "rich>=13.7",
  "hypothesis>=6.100",
  "ruff>=0.6.4",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "psutil>=5.9",
  "twine>=5.0",
  "build>=1.0",
]
baseline = [
  "covertree>=1.0.0",
  "scipy>=1.11",
  "mlpack>=4.6",
  "scikit-learn>=1.4",
]
viz = [
  "matplotlib>=3.8"
]

[project.urls]
homepage = "https://github.com/chiark/cover-tree"
repository = "https://github.com/chiark/cover-tree"

[tool.maturin]
python-packages = ["covertreex", "cli", "profiles"]
module-name = "covertreex_backend"
include = ["profiles/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["covertreex", "cli", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
packages = ["covertreex"]